# ds

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  biome.json  jest.config.mjs  latest  mkdocs.yml  package-lock.json  package.json  pyproject.toml  rollup.config.mjs  tsconfig.json  versions.json
.devcontainer/: devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: bnf-jest.yml  bnf-pytest.yml  ctest.yml  dependabot.yml  docs.yml  egg-jest.yml  egg-pytest.yml  example.yml  jest.yml  pre-commit.yml  pytest.yml
.vitepress/: config.mts
apyds/: __init__.py  _ds.pyi  _version.py  chain_t.py  ds.cc  ds.py  search_t.py  term_t.py  version.py
atsds/: ds.cc  index.mts  tsds.mts
bnf/: .gitignore  Ds.cf  Dsp.g4  IMPLEMENTATION.md  README.md  package-lock.json  package.json  pdm_build.py  pyproject.toml  rollup.config.mjs  setup.py  setup.sh  test_error_listener.mjs  tsconfig.json
bnf/apyds_bnf/: .gitignore  __init__.py  cli.py  parse.py  unparse.py
bnf/atsds_bnf/: .gitignore  index.js  index.mjs  index.mts
bnf/examples/: README.md  example.ds  example.dsp
bnf/grammars/: README.md
bnf/javascript/: README.md  package.json
bnf/javascript/src/: parse.ts  unparse.ts
bnf/javascript/tests/: conversion.test.js
bnf/py_tests/: test_conversion.py
bnf/python/: README.md  pyproject.toml
bnf/python/ds_bnf/: parse.py
bnf/python/tests/: __init__.py  test_conversion.py
bnf/src/: index.js
bnf/tests/: test_parse.mjs  test_parse.py  test_parse_unparse.mjs  test_parse_unparse.py  test_py_typed.py
cmake/: ds-config.cmake.in
docs/: index.md
docs/api/: cpp.md  python.md  typescript.md
docs/concepts/: rules.md  search.md  terms.md
docs/en/: index.md
docs/examples/: Sudoku.eta  Sudoku.vue  basic.md  index.md  sudoku.md
docs/getting-started/: installation.md  quickstart.md
docs/support-packages/: bnf.md  egg.md
docs/zh/: index.md
egg/: README.md  package-lock.json  package.json  pyproject.toml  setup.py
egg/apyds_egg/: .gitignore  __init__.py  __init__.pyx
egg/atsds_egg/: index.mts
egg/tests/: test_demo.py  test_egraph.py
examples/: ddar.ejs  ddar.mjs  engine.ds  engine.mjs  main.cc  main.js  main.mjs  main.py  search.mjs  sudoku.ejs  sudoku.mjs  sudoku_callback.mjs  suduku.ejs  suduku_callback.mjs
g4/: .gitignore  Ds.g4  main.js  main.py
include/ds/: chain.hh  generator.hh  rule.hh  search.hh  term.hh
jsds/: .gitignore  ds.cc  jsds.mjs  jsds.mts  tsds.mts
latest/: 404.html  index.html
latest/api/: cpp.html  python.html  typescript.html
latest/concepts/: rules.html  search.html  terms.html
latest/examples/: basic.html  index.html  sudoku.html
latest/getting-started/: installation.html  quickstart.html
latest/support-packages/: bnf.html  egg.html
ports/ds/: portfile.cmake  vcpkg.json
pyds/: __init__.py  buffer_size.py  common.py  ds.cc  ds.py  item_t.py  list_t.py  rule_t.py  search_t.py  string_t.py  term_t.py  variable_t.py
src/: chain.cc  match.cc  rename.cc  search.cc  string.cc  term.cc
swig/: .gitignore  Makefile  ds.i
tests/: test_chain.cc  test_chain.mjs  test_chain.py  test_item.mjs  test_item.py  test_list.mjs  test_list.py  test_match.cc  test_rename.cc  test_rule.cc  test_rule.mjs  test_rule.py  test_search.cc  test_search.mjs  test_search.py  test_string.mjs  test_string.py  test_term.cc  test_term.mjs  test_term.py  test_variable.cc  test_variable.mjs  test_variable.py
tsds/: _ds.cc  buffer_size.mts  common_t.mts  ds.cc  emcc_interface.mts  item_t.mts  list_t.mts  rule_t.mts  search_t.mts  string_t.mts  term_t.mts  tsds.mts  variable_t.mts
v0.0.10/: 404.html  index.html  sitemap.xml
v0.0.10-alpha1/: 404.html  index.html  sitemap.xml
v0.0.10-alpha1/api/: cpp.html  python.html  typescript.html
v0.0.10-alpha1/concepts/: rules.html  search.html  terms.html
v0.0.10-alpha1/examples/: basic.html  sudoku.html
v0.0.10-alpha1/getting-started/: installation.html  quickstart.html
v0.0.10-alpha1/search/: search_index.json
v0.0.10-alpha1/support-packages/: bnf.html
v0.0.10/api/: cpp.html  python.html  typescript.html
v0.0.10/concepts/: rules.html  search.html  terms.html
v0.0.10/examples/: basic.html  sudoku.html
v0.0.10/getting-started/: installation.html  quickstart.html
v0.0.11/: 404.html  index.html  sitemap.xml
v0.0.11-alpha1/: 404.html  index.html  sitemap.xml
v0.0.11-alpha2/: 404.html  index.html  sitemap.xml
v0.0.12/: 404.html  index.html  sitemap.xml
v0.0.12-alpha1/: 404.html  index.html  sitemap.xml
v0.0.12-alpha2/: 404.html  index.html  sitemap.xml
v0.0.13/: 404.html  index.html  sitemap.xml
v0.0.13-alpha1/: 404.html  index.html  sitemap.xml
v0.0.14/: 404.html  index.html  sitemap.xml
v0.0.2/: 404.html  index.html  sitemap.xml
v0.0.2-alpha3/: 404.html  index.html
v0.0.2-alpha5/: 404.html  index.html  sitemap.xml
v0.0.2-alpha6/: 404.html  index.html  sitemap.xml
v0.0.2-alpha7/: 404.html  index.html  sitemap.xml
v0.0.2-alpha8/: 404.html  index.html  sitemap.xml
v0.0.2/api/: cpp.html  (+2 more)
v0.0.3/: 404.html  index.html  sitemap.xml
v0.0.3-alpha1/: 404.html  index.html  sitemap.xml
v0.0.3-alpha2/: 404.html  index.html  sitemap.xml
v0.0.3-alpha3/: 404.html  index.html  sitemap.xml
v0.0.3-alpha4/: 404.html  index.html  sitemap.xml
v0.0.3-alpha5/: 404.html  index.html  sitemap.xml
v0.0.3-alpha6/: 404.html  index.html  sitemap.xml
v0.0.3-alpha7/: 404.html  index.html  sitemap.xml
v0.0.3-alpha8/: 404.html  index.html  sitemap.xml
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.4-alpha1/: 404.html  index.html  sitemap.xml
v0.0.4-alpha2/: 404.html  index.html  sitemap.xml
v0.0.5/: 404.html  index.html  sitemap.xml
v0.0.5-alpha1/: 404.html  index.html  sitemap.xml
v0.0.6/: 404.html  index.html  sitemap.xml
v0.0.6-alpha1/: 404.html  index.html  sitemap.xml
v0.0.7/: 404.html  index.html  sitemap.xml
v0.0.7-alpha1/: 404.html  index.html  sitemap.xml
v0.0.8/: 404.html  index.html  sitemap.xml
v0.0.9/: 404.html  index.html  sitemap.xml
v0.0.9-alpha1/: 404.html  index.html  sitemap.xml
(+431 files in other folders)
