[build-system]
requires = [
  "scikit-build-core~=0.11.6",
  "pybind11~=3.0.1",
  "setuptools-scm~=9.2.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "apyds"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.10, <3.14"
authors = [{ email = "hzhangxyz@outlook.com", name = "Hao Zhang" }]
description = "A deductive system"
readme = "README.md"
license = "GPL-3.0-or-later"

[project.urls]
Repository = "https://github.com/USTC-KnowledgeComputingLab/ds.git"

[tool.setuptools_scm]
version_file = "pyds/_version.py"
version_scheme = "no-guess-dev"
fallback_version = "0.0.0"

[tool.scikit-build]
wheel.packages = ["pyds"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build.verbose = true

[project.optional-dependencies]
dev = [
  "ruff~=0.14.6",
  "mypy~=1.18.2",
  "pytest~=9.0.1",
  "pytest-cov~=7.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E741", "E743", "F841"]

[tool.ruff.format]

[tool.cibuildwheel]
macos.archs = ["universal2"]
windows.archs = ["AMD64"]