[build-system]
requires = [
  "pdm-backend",
  "setuptools-scm~=9.2.2",
]
build-backend = "pdm.backend"

[project]
name = "apyds-bnf"
dynamic = ["version"]
dependencies = [
  "antlr4-python3-runtime~=4.13.2",
]
requires-python = ">=3.10, <3.15"
authors = [{ name = "Hao Zhang", email = "hzhangxyz@outlook.com" }]
description = "BNF parser and unparsers for DS - conversion between lisp-like and traditional syntax"
readme = "README.md"
license = "AGPL-3.0-or-later"

[project.urls]
Repository = "https://github.com/USTC-KnowledgeComputingLab/ds.git"

[tool.setuptools_scm]
version_file = "apyds_bnf/_version.py"
version_scheme = "no-guess-dev"
fallback_version = "0.0.0"
root = ".."

[tool.pdm.build]
includes = ["apyds_bnf"]
